test/types/range/deitz/test_int8_range_big_stride.good
test_int8_range_big_stride.chpl:1: error: the step argument of the 'by' operator is too large
